tests/errors/surf_name_03.ki
# name resolution: an inner function's local is invisible to the outer scope
var outer = Function():
    var inner = 5
    return inner
outer()
discard inner
